crates/compiler/src/tests/e2e/good/0418_fn_apply_to_int_generic/main.gom
fn identity[T](x: T) -> T { x }

fn apply_to_int(f: (int32) -> int32, x: int32) -> int32 { f(x) }

fn main() {
    let result = apply_to_int(identity, 42);
    println(result.to_string());
}
