crates/compiler/src/tests/e2e/bad/0572_mutual_recursive_generic_specialization/main.gom
fn left[T](x: T) -> unit {
    right((x, x))
}

fn right[U](x: U) -> unit {
    left((x, x))
}

fn main() -> unit {
    left(0i32)
}
